--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	//implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
-	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.0'
-	//implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.0'
-	runtimeOnly 'com.sun.xml.bind:jaxb-impl:3.0.0'
+	implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
+	implementation 'javax.xml.bind:jaxb-api:2.3.1'
+	implementation 'com.sun.xml.bind:jaxb-impl:2.3.1'
+	implementation 'org.javassist:javassist:3.25.0-GA'
 	compileOnly 'org.projectlombok:lombok'
 	//runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
